# remote-settings-collection-updater-example

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  script.py  test.py
.github/workflows/: cd.yaml  ci.yaml
