[project]
name = "rs-script"
version = "0.1.0"
description = "A minimal Remote Settings cronjob script"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
license = {text = "MPLv2"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "kinto-http<12.0.0,>=11.8.0",
    "pytest<9.0.0,>=8.4.0",
    "sentry-sdk<3.0.0,>=2.29.1",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.11.12",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 99
extend-exclude = [
    "__pycache__",
    ".venv/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
